--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>String Knitting Art</title>
+    <link rel="stylesheet" href="./src/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>String Knitting Art</title>
-  <link rel="stylesheet" href="./src/style.css">
-</head>
+  <body>
+    <h1>String Knitting Art</h1>
 
-<body>
-  <h1>String Knitting Art</h1>
+    <div id="container">
+      <div id="plate"></div>
+      <canvas id="canvas" width="600" height="600"></canvas>
+    </div>
 
-  <div id="container">
-    <div id="plate"></div>
-    <canvas id="canvas" width="600" height="600"></canvas>
-  </div>
-
-  <script src="./node_modules/svg.js/dist/svg.js"></script>
-  <script src="./node_modules/zepto/dist/zepto.js"></script>
-  <script src="./src/index.js"></script>
-</body>
-
+    <!-- <script src="./node_modules/svg.js/dist/svg.js"></script> -->
+    <script src="http://unpkg.com/svg.js/dist/svg.js"></script>
+    <!-- <script src="./node_modules/zepto/dist/zepto.js"></script> -->
+    <script src="http://unpkg.com/zepto/dist/svg.js"></script>
+    <script src="./src/index.js"></script>
+  </body>
 </html>
