--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <script src="./node_modules/svg.js/dist/svg.js"></script> -->
     <script src="https://unpkg.com/svg.js/dist/svg.js"></script>
     <!-- <script src="./node_modules/zepto/dist/zepto.js"></script> -->
-    <script src="https://unpkg.com/zepto/dist/svg.js"></script>
+    <script src="https://unpkg.com/zepto/dist/zepto.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
